fix spacing btwn h1/p/button

--- a/containers/ecr-viewer/src/styles/utilities.scss
+++ b/containers/ecr-viewer/src/styles/utilities.scss
@@ -108,3 +108,7 @@
 .gap-105 {
   gap: 0.75rem;
 }
+
+.gap-5 {
+  gap: 2.5rem;
+}
